# src/util/api.ts
@@ -1,18 +1,23 @@
 export const apis = {
-    user: {
-        head: '/api/user',
-        getUserList: '/getUserList',
-        createUser: '/createUser',
-        updateUser: '/updateUser',
-        login: '/login',
-        refreshToken: '/refreshToken',
-    },
-    post: {
-        head: '/api/post',
-        getPostList: '/getPostList',
-        createPost: '/createPost',
-        createCategory: '/createCategory',
-        updatePost: '/updatePost',
-        getCategoryList: '/getCategoryList'
-    }
+  user: {
+    head: "/api/user",
+    getUserList: "/getUserList",
+    createUser: "/createUser",
+    login: "/login",
+    refreshToken: "/refreshToken",
+    updateUser: "/updateUser",
+  },
+  post: {
+    head: "/api/post",
+    getPostList: "/getPostList",
+    createPost: "/createPost",
+    createCategory: "/createCategory",
+    updatePost: "/updatePost",
+    getCategoryList: "/getCategoryList",
+  },
+  activity: {
+    head: "/api/activity",
+    getActivityList: "/getActivityList",
+    saveActivity: "/saveActivity",
+  },
 };
